# audiodeepfake_public

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-ci.txt  requirements.txt  setup_baselines.sh
config/: __init__.py  audio_types.py  base.py
core/: __init__.py  feature_extractor.py  segmenter.py  similarity_computer.py
data/: README.md
evaluation/: __init__.py  ablation.py  ensemble_eval.py  feature_importance.py  generalization_test.py  metrics.py  report_generator.py
examples/: quickstart.py
inference/: __init__.py  audio_processor.py  classifiers.py  detector.py  embedding_engine.py  feature_computer.py  model_registry.py
models/: __init__.py  ensemble.py
scripts/: __init__.py  ablation_ensemble_features.py  ablation_feature_count.py  ablation_silence_filtering.py  analyze_augmentation.py  augment_audio.py  combine_music_features.py  compare_embeddings.py  download_asvspoof.py  download_deepspeak.py  download_eval_datasets.py  download_fakemusiccaps.py  download_librispeech.py  download_mlaad.py  download_musdb18.py  download_sonics.py  download_sonics_real_stratified.py  download_sonics_subset.py  evaluate_ensembles.py  extract_fakeavceleb_audio.py  extract_features.py  extract_fma_samples.py  generate_sample_training_data.py  monitor_extraction.sh  organize_datasets.py  prepare_eval_datasets.py  regenerate_top_features_fig.py  run_generalization_eval.py  run_mlaad_extractions.sh  run_treeshap_analysis.py  run_wavlm_extractions.sh  sample_spoofceleb.py  scientific_analysis.py
sota_benchmarking/: compare_all_results.py  generate_embeddings.py  prepare_asvspoof5_subsample.py  prepare_data.py  run_aasist_baseline.py  run_paper_moe_crosseval.py  run_ssl_baselines.py  run_ssl_temporal_eval.py
tests/: test_smoke.py
training/: __init__.py  data_loader.py  domain_adaptation.py  feature_selector.py  gated_ensemble.py  trainer.py
utilities/: aasist_inference.py  clap_inference.py  msclap_inference.py  voice_isolation.py  wav2vec2_inference.py  (+1 more)
(+12 files in other folders)
