[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiodeepfake"
version = "1.0.0"
description = "Audio deepfake detection via temporal coherence analysis of CLAP embeddings."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Justin Norman", email = "justin.norman@berkeley.edu" },
    { name = "Sarah Barrington", email = "sbarrington@berkeley.edu" },
]
keywords = [
    "audio",
    "deepfake",
    "detection",
    "CLAP",
    "temporal-coherence",
    "speech",
    "music",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "laion_clap>=1.1.7",
    "msclap>=1.3",
    "transformers>=4.57",
    "huggingface-hub>=0.30",
    "torch>=2.6",
    "torchaudio>=2.6",
    "scikit-learn>=1.6",
    "xgboost>=2.1",
    "shap>=0.46",
    "numpy>=1.26,<2",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "PyYAML>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/stbiadmin/audiodeepfake_public"

[tool.setuptools]
packages = [
    "config",
    "core",
    "evaluation",
    "inference",
    "models",
    "models.classifiers",
    "training",
    "utilities",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
]
